--- a/src/view/index.html
+++ b/src/view/index.html
@@ -65,6 +65,9 @@
             </div>
             <!-- a table is to come here -->
             <div class="rightbody ">
+                <p>{{ data }}</p>
+
+                <p>{{ indexData }}</p>
                 <div id="indextable" class="table table-bordered" ng-if="showIndex">
                     <strong> Inverted Index Table</strong>
                     <table>
@@ -108,16 +111,13 @@
         </div>
         <!-- end of main div -->
     </div>
-    <script src="js/app.js "></script>
-    <script src="../js/inverted-index.js "></script>
+    <script src="./js/app.js "></script>
+    <script src="../js/bundle.js "></script>
 
     <!-- Controllers -->
     <script src="js/controllers/MainController.js "></script>
     <!-- directives -->
     <!-- services -->
-    <script src="js/services/invertedIndex.js "></script>
-
-
 </body>
 
 </html>
