--- a/src/view/index.html
+++ b/src/view/index.html
@@ -65,13 +65,14 @@
             <div class="right-nav">
                 <div class="selectfile">
                     <select ng-model="selected" class="search" id="selectfile">
+                    <option selected disabled hidden value="">Select file</option>
                     <option ng-repeat="file in searchfiles" value="file">{{ file }}</option>
                     </select>
                 </div>
                 <div class="searchFiles ">
                     <form class="navbar-form navbar-left">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="file.json and or search_terms" id="search">
+                            <input type="text" class="form-control" placeholder="search..." id="search">
                         </div>
                         <button type="submit" class="btn btn-default" ng-click="search()">Search</button>
                     </form>
@@ -121,7 +122,7 @@
         <!-- end of main div -->
     </div>
     <script src="./js/app.js "></script>
-    <script src="../js/bundle.js "></script>
+    <script src="../js/invertedIndex.js "></script>
 
     <!-- Controllers -->
     <script src="js/controllers/MainController.js "></script>
