--- a/src/view/css/main.css
+++ b/src/view/css/main.css
@@ -9,9 +9,9 @@ body {
 
 #headtext {
     color: white;
-    font-family: cursive;
+    font-family: 'Roboto', sans-serif;
     font-size: 50px;
-    float: left;
+    float: right;
 }
 
 .header {
@@ -22,7 +22,7 @@ body {
     margin-left: 12px;
     margin-right: auto;
     height: 100px;
-    background-color: #333538;
+    background-color: #2F3F73;
     margin-bottom: 10px;
 }
 
@@ -35,7 +35,7 @@ body {
     min-height: 900px;
     height: auto;
     padding-left: 30px;
-    background-color: #B9D7D9;
+    background-color: #FFE5AA;
     margin-bottom: 10px;
 }
 
@@ -47,7 +47,7 @@ body {
     min-height: 900px;
     height: auto;
     padding-left: 10px;
-    background-color: #F4EBC3;
+    background-color: #FFDFAC;
     margin-bottom: 10px;
 }
 
